--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Centered Header</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Centered Header</title>
 
-  <!-- Modern Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
+    <!-- Modern Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;   /* horizontal */
-      align-items: center;       /* vertical */
-      background: #f7f7f7;
-      font-family: "Inter", sans-serif;
-    }
+    <style>
+        body {
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center; /* horizontal */
+            align-items: center; /* vertical */
+            background: #f7f7f7;
+            font-family: "Inter", sans-serif;
+            flex-direction: column;
+        }
 
-    h1 {
-      font-size: 3rem;
-      font-weight: 600;
-      color: #333;
-    }
-  </style>
+        h1 {
+            font-size: 3rem;
+            font-weight: 600;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-  <h1>Czy Estakada w Chorzowie jeszcze stoi?</h1>
+<div class="container">
+    <h1>Czy Estakada w Chorzowie jeszcze stoi?</h1>
+    <div class="tenor-gif-embed" data-postid="7769106" data-share-method="host" data-aspect-ratio="1.77778"
+         data-width="100%"><a href="https://tenor.com/view/rutkowski-jak-ajak-gif-7769106">Rutkowski Jak GIF</a>from <a
+            href="https://tenor.com/search/rutkowski-gifs">Rutkowski GIFs</a></div>
+    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+</div>
 </body>
 </html>
